css/default.css
/* ... */
#popup-options-dialog .option-buttons label:hover .button-text .label {
    text-decoration: dotted underline;
}

#popup-options-dialog .option-buttons input {
    appearance: none;
    font-family: inherit;
    font-size: inherit;
    border: 1px solid var(--GW-popups-popup-options-dialog-radio-button-border-color);
    width: 1rem;
    height: 1rem;
    padding: 0;
    margin: 0.75em 0 0 0;
    flex: 1 0 auto;
    transition:
        box-shadow 0.15s ease;
}

#popup-options-dialog .option-buttons input:checked {
    box-shadow:
        0 0 0 3px var(--background-color) inset,
        0 0 0 1em var(--GW-popups-popup-options-dialog-button-hover-box-shadow-color) inset;
}

/*  With popups disabled, the “show popup options dialog” icon/button.
    */
#popups-disabled-show-popup-options-dialog-button {
    position: fixed;
    top: calc(0.55em + 3px);
    right: 12em;
    z-index: 1;
    opacity: 0.3;
    visibility: visible;
    transition:
        opacity 2s ease;
}
@media only screen and (max-width: 1760px) {
    #popups-disabled-show-popup-options-dialog-button {
        top: 15em;
        right: 0.6em;
    }
}
#popups-disabled-show-popup-options-dialog-button.hidden {
    opacity: 0;
}
#popups-disabled-show-popup-options-dialog-button:hover {
    opacity: 1.0;
    transition: none;
}
#popups-disabled-show-popup-options-dialog-button button {
    appearance: none;
    border: none;
    font-family: inherit;
    font-size: inherit;
    background: inherit;
    color: var(--GW-popups-show-popup-options-dialog-button-color);
    fill: currentColor;
    padding: 0;
    line-height: 1;
    display: block;
    width: 1.125em;
}
#popups-disabled-show-popup-options-dialog-button button:hover {
    cursor: pointer;
    opacity: 1.0;
}
#popups-disabled-show-popup-options-dialog-button button:active {
    transform: scale(0.95);
}

/**********/
/* POPINS */
/**********/

/*  The three nested boxes that make up a popin:
    1. Outer frame (positioned within the block flow, after the spawning target)
    2. Scroll view
    3. Content view

    The content view contains the actual contents of a popin.
    */
.popin,
.popin .popframe-scroll-view,
.popin .popframe-content-view,
.popin .popframe-title-bar {
    box-sizing: border-box;
}

/*┌────────────────────┐*/
/*│ Popin outer frame. │*/
/*└────────────────────┘*/

.popin {
    --background-color: var(--GW-popins-popin-background-color);

    /*  Layout. */
    --popins-popin-content-padding: 0.7em 0.9em 0.8em 0.9em;

    display: block;
    position: absolute;
    left: 0;
    width: 100%;
    max-height: var(--GW-popins-popin-max-height);
    min-height: var(--GW-popins-popin-min-height);
    overflow: visible;
    z-index: 100;

    /*  Styling. */
    border: var(--GW-popins-popin-border-width) double var(--GW-popins-popin-border-color);
    filter: drop-shadow(1px 2px 4px var(--GW-popins-box-shadow-color));
    background-color: var(--background-color);
}

.popin + .popin {
    display: none;
}

/*┌──────────────────┐*/
/*│ Popin title bar. │*/
/*└──────────────────┘*/

.popin .popframe-title-bar {
    --background-color: var(--GW-popins-popin-title-bar-background-color);

    position: absolute;
    right: calc(-1 * var(--GW-popins-popin-border-width));
    bottom: calc(100%);
    height: calc(var(--GW-popins-popin-border-width) + var(--GW-popins-popin-title-bar-height));
    max-width: calc(100% + (2 * var(--GW-popins-popin-border-width)) - 2em);
    border-style: double;
    border-color: var(--GW-popins-popin-border-color);
    border-width: var(--GW-popins-popin-border-width) var(--GW-popins-popin-border-width) 0 var(--GW-popins-popin-border-width);
    background-color: var(--background-color);
    display: flex;
    flex-flow: row;
    align-items: center;
    width: fit-content;
    z-index: 1;
}

.popin {
    --popin-title-bar-height: 0px;
}
.popin.has-title-bar {
    --popin-title-bar-height: var(--GW-popins-popin-title-bar-height);
}

/*  Popin title.
    */
.popin .popframe-title {
    display: flex;
    justify-content: center;
    font-family: var(--GW-sans-serif-font-stack);
    font-size: 0.875rem;
    flex: 1 1 100%;
    padding: 0 1rem;
    white-space: nowrap;
    overflow: hidden;
    text-decoration: none;
    text-align: center;
    text-indent: 0;
}
.popin .popframe-title::after {
    display: none;
}

.popin .popframe-title-link,
.popin .popframe-title span {
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}

/*  Buttons in the popin title bar.
    */
.popin .popframe-title-bar-button {
    appearance: none;
    border: none;
    background-color: transparent;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    font-style: inherit;
    margin: 0 1px;
    padding: 4px;
    height: 100%;
    flex: 1 0 auto;
    width: calc(var(--GW-popins-popin-title-bar-height) - 1px);
    cursor: pointer;
    color: var(--GW-popins-popin-title-bar-button-color);
}
.popin .popframe-title-bar-button:active {
    transform: scale(0.9);
}
.popin .popframe-title-bar-button svg {
    max-width: 100%;
    max-height: 100%;
    width: 24px;
    height: 24px;
}

.popin .popframe-title-bar-button:disabled {
    pointer-events: none;
    opacity: 0.35;
}
/* ... */

